adds all_segments option for common connectivity, find neurons, and completeness queries; fixes #21, #22, #23
